k8s-music-albums-app/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: gutsy
  labels:
    app: music-albums-app
  name: go-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: music-albums-app
  template:
    metadata:
      labels:
        app: music-albums-app
    spec:
      containers:
      - name: go-server
        image: docker.io/library/go-server:1.0.0
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 200m
            memory: 256Mi
        command: [/server]
        args: [redis-service.gutsy.svc.cluster.local:6379 ]
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9090
