k8s-music-albums-app/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: gutsy
  name: redis-service
spec:
  selector:
    app: music-albums-app
  ports:
  - name: redis
    port: 6379
