k8s-music-albums-app/server-service.yml
kind: Service
apiVersion: v1
metadata:
  namespace: gutsy
  name: go-server-service
spec:
  selector:
    app: music-albums-app
  ports:
  - protocol: TCP
    port: 9090
    targetPort: 9090
