k8s-music-albums-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: gutsy
spec:
  tls:
  - hosts:
    - music-albums-demo-app.io
    secretName: tls-secret
  rules:
  - http:
      paths:
      - path: /api/v1/music-albums
        pathType: Prefix
        backend:
          service:
            name: go-server-service
            port:
              number: 9090
